# impVM

./: CMakeLists.txt  DESCRIPTION.md  Dockerfile  Dockerfile-pwn  LICENSE  META.json  README.md  emulator.c  emulator.h  execution.h  imp.h  impVM  jitter.h  pwn.py  rev.cmp  rev_flag.txt  xtea_de.cmp  ynetd
asm/: asm.cabal  bf.imp  bootles.py  stack.yaml
asm/app/: Main.hs
asm/src/: IMP.hs
src/: decoder.c  decoder.h  emulator.c  emulator.h  execution.c  execution.h  imp.h  jitter.c  jitter.h  loader.c  loader.h  main.c  profiler.c  profiler.h  utils.c  utils.h
test/: bf.imp  bottles-2542.txt  bottles.py  fib  test  test.imp  test2.imp  xtea.py  xtea_decrypt.imp  xtea_encrypt.imp
